tests/NormalTests/paczka1/small_fuzzy/72832226.err
Error in line 2: 1gAR2UxFv S473 15,9
Error in line 3: 1gAR2UxFv A406 7,2
Error in line 1: iV9Qq5t A406 83,9
Error in line 5: 2x4C5iQp A295 74,0
